@@ -1,3 +1,8 @@
+2002-08-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* crt1/gcrt1.S: avr-gcc >= 3.3 is required.
+	* avr-libc.spec.in: avr-gcc >= 3.3 is required.
+
 2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* doc/api/faq.dox: add a subsection about _BV().
